# GYM-TrainerAppBackend

./: pyproject.toml
.github/workflows/: main.yml
src/core/: urls.py
src/core/settings/: __init__.py  admin_panel.py  buckets.py  core.py  environments.py  swagger.py
src/core/utils/: constants.py  paginations.py  permissions.py
src/system/: admin.py  tasks.py  urls.py
src/system/apis/: __init__.py  auth.py  health.py  trainer.py
src/system/migrations/: 0001_initial.py  0002_remove_userbase_address_and_more.py  0003_userbase_id_proof_userbase_id_proof_content_type_and_more.py  0004_userbase_is_admin_approved.py  0005_alter_userbase_first_name_alter_userbase_last_name.py  0006_userbase_is_rejected.py
src/system/models/: __init__.py  otp.py  users.py
src/system/serializers/: register.py  users.py
src/system/templates/: trainer_approved.html  trainer_rejected.html  verification_email.html  verification_email.txt  welcome_email.html
src/system/templates/admin/: reject_trainer_form.html
